feat: comprehensive UX and accessibility improvements
Phase 1 optimizations based on sequential thinking analysis:

Accessibility:
- Add skip-to-content link for keyboard navigation
- Improve color contrast for light mode (WCAG AA)
- Add proper ARIA labels to buttons

Performance:
- Add lazy loading for images via JavaScript
- Add image fallback background color

SEO & Social:
- Add Open Graph meta tags
- Add Twitter Card meta tags
- Pass heroImage from briefings to layout

UI/UX:
- Add RSS button to header (next to theme toggle)
- Improve blockquote styling with background and better spacing
- Add mobile responsive breakpoints
- Fix card backgrounds for light mode compatibility
- Remove H1 misuse in "Zahl der Woche" section

Cleanup:
- Remove example briefing file

--- a/src/content/briefings/2025/12/2025-12-27-ai-weekly.md
+++ b/src/content/briefings/2025/12/2025-12-27-ai-weekly.md
@@ -130,9 +130,9 @@ Was wir lernen: Technologie ohne Guardrails scaled nicht nur Innovation, sondern
 
 ## Zahl der Woche
 
-# 4 Modelle
+**4 Frontier-Modelle in 25 Tagen**
 
-**in 25 Tagen** – Grok 4.1, Gemini 3, Claude Opus 4.5, GPT-5.2 zwischen 17. Nov und 11. Dez 2025
+Grok 4.1, Gemini 3, Claude Opus 4.5, GPT-5.2 zwischen 17. Nov und 11. Dez 2025
 
 Die AI-Industrie hat den Turbo gezündet. Zum Vergleich: GPT-4 zu GPT-4.5 dauerte über ein Jahr. Jetzt sehen wir Frontier-Model-Releases im Wochentakt. Das ist entweder der Weg zur AGI – oder ein unhaltbares Wettrüsten, das crashen wird.
 
