fix: rename TL;DR to 'Auf einen Blick' with proper styling

--- a/src/content/briefings/2025/12/2025-12-27-ai-weekly.md
+++ b/src/content/briefings/2025/12/2025-12-27-ai-weekly.md
@@ -25,7 +25,7 @@ sources:
 draft: false
 ---
 
-## TL;DR
+## Auf einen Blick
 
 Diese Woche in 30 Sekunden:
 - **Code Red:** Sam Altman ruft den Notstand aus – OpenAI verschiebt sogar Werbepläne, um gegen Gemini zu kämpfen
