feat: Tag-basierte Navigation
- TagLink-Komponente: klickbare Tags mit Hover-Effekt
- TagCloud-Komponente: Tag-Übersicht mit Counts
- /tags/ Übersichtsseite: alle Themen als Grid
- /tags/[tag]/ dynamische Seiten pro Tag
- Index-Seite: Tag-Cloud + Tags bei jedem Artikel
- Briefing-Seite: Tags jetzt klickbar
- Mehr Tags: openai, google, anthropic, gemini, gpt, models

--- a/src/content/briefings/2025/12/2025-12-27-ai-weekly.md
+++ b/src/content/briefings/2025/12/2025-12-27-ai-weekly.md
@@ -2,7 +2,7 @@
 title: "AI Weekly - KW 52/2025"
 description: "Code Red bei OpenAI, Gemini 3 Flash setzt neue Maßstäbe, und die AI-Industrie liefert 4 Frontier-Modelle in 25 Tagen"
 date: 2025-12-27
-tags: [ai, weekly, newsletter]
+tags: [ai, weekly, openai, google, anthropic, gemini, gpt, models]
 type: weekly
 heroImage: "https://fortune.com/img-assets/wp-content/uploads/2025/12/OpenAI-Google-Code-Red.jpg"
 sources:
