--- a/src/content/briefings/2025/12/2025-12-27-ai-weekly.md
+++ b/src/content/briefings/2025/12/2025-12-27-ai-weekly.md
@@ -4,22 +4,19 @@ description: "Code Red bei OpenAI, Gemini 3 Flash setzt neue Maßstäbe, und die
 date: 2025-12-27
 tags: [ai, weekly, openai, google, anthropic, gemini, gpt, models]
 type: weekly
-heroImage: "https://fortune.com/img-assets/wp-content/uploads/2025/12/OpenAI-Google-Code-Red.jpg"
 sources:
   - title: "Sam Altman declares 'Code Red' as Google's Gemini surges"
     url: "https://fortune.com/2025/12/02/sam-altman-declares-code-red-google-gemini-ceo-sundar-pichai/"
-  - title: "Introducing GPT-5.2"
-    url: "https://openai.com/index/introducing-gpt-5-2/"
-  - title: "Google launches Gemini 3 Flash, makes it the default model"
+  - title: "Nvidia buying Groq for $20B"
+    url: "https://www.cnbc.com/2025/12/24/nvidia-buying-ai-chip-startup-groq-for-about-20-billion-biggest-deal.html"
+  - title: "Google launches Gemini 3 Flash"
     url: "https://techcrunch.com/2025/12/17/google-launches-gemini-3-flash-makes-it-the-default-model-in-the-gemini-app/"
-  - title: "AI Model Releases Nov/Dec 2025"
-    url: "https://vertu.com/lifestyle/the-ai-model-race-reaches-singularity-speed/"
-  - title: "Yann LeCun launches Advanced Machine Intelligence"
-    url: "https://theaiinsider.tech/2025/12/26/ai-insiders-week-in-review-openai-expands-chatgpt-yann-lecun-launches-new-start-up-alphabet-energy-supply-new-york-enacts-ai-safety-legislation-plus-the-latest-funding-rounds/"
-  - title: "OpenAI's new image generation model"
-    url: "https://techcrunch.com/2025/12/16/openai-continues-on-its-code-red-warpath-with-new-image-generation-model/"
-  - title: "Anthropic makes Skills an open standard"
-    url: "https://sdtimes.com/ai/this-week-in-ai-updates-anthropic-makes-skills-an-open-standard-gpt-5-2-codex-released-and-more-december-19-2025/"
+  - title: "Waymo tests Gemini in robotaxis"
+    url: "https://techcrunch.com/2025/12/24/waymo-is-testing-gemini-as-an-in-car-ai-assistant-in-its-robotaxis/"
+  - title: "Italy tells Meta to allow rival chatbots"
+    url: "https://techcrunch.com/2025/12/24/italy-tells-meta-to-suspend-its-policy-that-bans-rival-ai-chatbots-from-whatsapp/"
+  - title: "ChatGPT Year in Review"
+    url: "https://techcrunch.com/2025/12/22/chatgpt-launches-a-year-end-review-like-spotify-wrapped/"
   - title: "AI slop and social media scandals"
     url: "https://www.euronews.com/next/2025/12/27/bans-ai-slop-and-hitler-praising-chatbots-what-were-the-biggest-scandals-in-social-media-t"
 draft: false
@@ -78,6 +75,27 @@ Die Industrie hat von "question-answering systems" zu "autonomous agents that ca
 
 ---
 
+### Nvidia kauft Groq für $20 Milliarden – größter Deal ever
+
+![Nvidia Groq](https://image.cnbcfm.com/api/v1/image/nvidia-groq-deal.jpg)
+
+Am Heiligabend verkündete Nvidia die größte Akquisition in der Firmengeschichte: **$20 Milliarden in Cash** für Groq, den AI-Chip-Challenger, der auf Low-Latency Inference spezialisiert ist.
+
+Groq wurde 2016 von Google-TPU-Miterfinder Jonathan Ross gegründet und hatte im September 2024 eine $6.9B Valuation nach $750M Raise. Ihre LPUs (Language Processing Units) sind optimiert für Inference – nicht Training – und liefern extrem vorhersagbare Latenz.
+
+**Was Nvidia bekommt:**
+- Groqs gesamtes IP und Team (Ross wird Nvidia beitreten)
+- Spezialisierte Inference-Chips für Echtzeit-AI
+- 2+ Millionen Entwickler, die GroqCloud nutzen
+
+**Was Nvidia NICHT bekommt:** GroqCloud selbst bleibt unabhängig und operiert weiter.
+
+> "We plan to integrate Groq's low-latency processors into the NVIDIA AI factory architecture." - Jensen Huang, Nvidia CEO
+
+**Kritische Stimme:** Bernstein-Analyst Stacy Rasgon: "Structuring as non-exclusive license may keep the fiction of competition alive" – der Deal könnte Antitrust-Bedenken aufwerfen.
+
+---
+
 ### Yann LeCun startet AMI – und will LLMs neu denken
 
 Meta's Chief AI Scientist Yann LeCun (Turing Award Winner) hat Advanced Machine Intelligence (AMI) gegründet. Die Vision? "World-model AI designed to reason about environments and cause-and-effect as an alternative to large language models."
@@ -90,11 +108,12 @@ Das Startup sucht **€500 Millionen bei einer €3 Milliarden Valuation**. Der 
 
 Kurz notiert:
 
-- **Anthropic Skills wird Open Standard:** Skills (seit Oktober in Claude) ist jetzt offen – andere Plattformen können repeatable workflows integrieren. [Details](https://sdtimes.com/ai/this-week-in-ai-updates-anthropic-makes-skills-an-open-standard-gpt-5-2-codex-released-and-more-december-19-2025/)
-- **OpenAI GPT Image 1.5:** 4x schneller, besseres Instruction-Following, präzise Edits die Facial Likeness und Lighting konsistent halten. [Launch Post](https://techcrunch.com/2025/12/16/openai-continues-on-its-code-red-warpath-with-new-image-generation-model/)
-- **Alphabet kauft Intersect Power:** $4.75 Milliarden Deal für dedizierte Renewable Power für AI Data Centers. Der Energiehunger ist real.
-- **Google Workspace Studio:** AI-Automation Hub für Gmail, Drive, Chat – build Agents in plain English.
-- **Nvidia Nemotron 3:** Nano (30B), Super (100B), Ultra (500B) – optimiert für Agentic AI Systems.
+- **Waymo testet Gemini in Robotaxis:** AI-Assistent beantwortet Passagier-Fragen, steuert Kabinen-Features, gibt Reise-Infos. [Details](https://techcrunch.com/2025/12/24/waymo-is-testing-gemini-as-an-in-car-ai-assistant-in-its-robotaxis/)
+- **Italien stoppt Meta:** WhatsApp muss konkurrierende AI-Chatbots zulassen – Kartellamt greift durch. [TechCrunch](https://techcrunch.com/2025/12/24/italy-tells-meta-to-suspend-its-policy-that-bans-rival-ai-chatbots-from-whatsapp/)
+- **ChatGPT "Year in Review":** Spotify Wrapped-Style Jahresrückblick für ChatGPT-User – personalisierte Stats und Highlights. [Launch](https://techcrunch.com/2025/12/22/chatgpt-launches-a-year-end-review-like-spotify-wrapped/)
+- **Seattle's erster AI Officer:** Lisa Qian (ex-LinkedIn, Airbnb) wird erste Chief AI Officer der Stadt. [OPB](https://www.opb.org/article/2025/12/27/seattle-ai-officer/)
+- **Alphabet kauft Intersect Power:** $4.75 Milliarden Deal für dedizierte Renewable Power für AI Data Centers.
+- **OpenAI GPT Image 1.5:** 4x schneller, besseres Instruction-Following, Facial Likeness konsistent. [Launch](https://techcrunch.com/2025/12/16/openai-continues-on-its-code-red-warpath-with-new-image-generation-model/)
 
 ---
 
@@ -130,11 +149,11 @@ Was wir lernen: Technologie ohne Guardrails scaled nicht nur Innovation, sondern
 
 ## Zahl der Woche
 
-**4 Frontier-Modelle in 25 Tagen**
+**$20 Milliarden**
 
-Grok 4.1, Gemini 3, Claude Opus 4.5, GPT-5.2 zwischen 17. Nov und 11. Dez 2025
+Nvidias größter Deal ever – für Groq's Inference-Chips
 
-Die AI-Industrie hat den Turbo gezündet. Zum Vergleich: GPT-4 zu GPT-4.5 dauerte über ein Jahr. Jetzt sehen wir Frontier-Model-Releases im Wochentakt. Das ist entweder der Weg zur AGI – oder ein unhaltbares Wettrüsten, das crashen wird.
+Die Message: Training ist gelöst, jetzt geht es um Inference. Nvidia sichert sich die beste Low-Latency-Technologie am Markt. Zum Vergleich: Der bisherige Rekord war Mellanox 2019 für $7B. Dieser Deal ist fast 3x größer – und zeigt, wo die nächste AI-Schlacht stattfindet.
 
 ---
 
