--- a/src/content/briefings-en/2025/12/2025-12-27-ai-weekly.md
+++ b/src/content/briefings-en/2025/12/2025-12-27-ai-weekly.md
@@ -1,25 +1,22 @@
 ---
 title: "AI Weekly - Week 52/2025"
-description: "Code Red at OpenAI, Gemini 3 Flash sets new standards, and the AI industry ships 4 frontier models in 25 days"
+description: "Code Red at OpenAI, Gemini 3 Flash sets new benchmarks, and the AI industry delivers 4 frontier models in 25 days"
 date: 2025-12-27
 tags: [ai, weekly, openai, google, anthropic, gemini, gpt, models]
 type: weekly
-translationSlug: "2025/12/2025-12-27-ai-weekly"
 sources:
   - title: "Sam Altman declares 'Code Red' as Google's Gemini surges"
     url: "https://fortune.com/2025/12/02/sam-altman-declares-code-red-google-gemini-ceo-sundar-pichai/"
-  - title: "Introducing GPT-5.2"
-    url: "https://openai.com/index/introducing-gpt-5-2/"
-  - title: "Google launches Gemini 3 Flash, makes it the default model"
+  - title: "Nvidia buying Groq for $20B"
+    url: "https://www.cnbc.com/2025/12/24/nvidia-buying-ai-chip-startup-groq-for-about-20-billion-biggest-deal.html"
+  - title: "Google launches Gemini 3 Flash"
     url: "https://techcrunch.com/2025/12/17/google-launches-gemini-3-flash-makes-it-the-default-model-in-the-gemini-app/"
-  - title: "AI Model Releases Nov/Dec 2025"
-    url: "https://vertu.com/lifestyle/the-ai-model-race-reaches-singularity-speed/"
-  - title: "Yann LeCun launches Advanced Machine Intelligence"
-    url: "https://theaiinsider.tech/2025/12/26/ai-insiders-week-in-review-openai-expands-chatgpt-yann-lecun-launches-new-start-up-alphabet-energy-supply-new-york-enacts-ai-safety-legislation-plus-the-latest-funding-rounds/"
-  - title: "OpenAI's new image generation model"
-    url: "https://techcrunch.com/2025/12/16/openai-continues-on-its-code-red-warpath-with-new-image-generation-model/"
-  - title: "Anthropic makes Skills an open standard"
-    url: "https://sdtimes.com/ai/this-week-in-ai-updates-anthropic-makes-skills-an-open-standard-gpt-5-2-codex-released-and-more-december-19-2025/"
+  - title: "Waymo tests Gemini in robotaxis"
+    url: "https://techcrunch.com/2025/12/24/waymo-is-testing-gemini-as-an-in-car-ai-assistant-in-its-robotaxis/"
+  - title: "Italy tells Meta to allow rival chatbots"
+    url: "https://techcrunch.com/2025/12/24/italy-tells-meta-to-suspend-its-policy-that-bans-rival-ai-chatbots-from-whatsapp/"
+  - title: "ChatGPT Year in Review"
+    url: "https://techcrunch.com/2025/12/22/chatgpt-launches-a-year-end-review-like-spotify-wrapped/"
   - title: "AI slop and social media scandals"
     url: "https://www.euronews.com/next/2025/12/27/bans-ai-slop-and-hitler-praising-chatbots-what-were-the-biggest-scandals-in-social-media-t"
 draft: false
@@ -28,101 +25,117 @@ draft: false
 ## TL;DR
 
 This week in 30 seconds:
-- **Code Red:** Sam Altman declares emergency – OpenAI even postpones ad plans to fight Gemini
-- **Model Madness:** 4 frontier models in 25 days – the industry has gone completely insane
-- **Gemini Dominates:** Google's 3 Flash becomes the default everywhere and beats almost all benchmarks
+- **Code Red:** Sam Altman declares emergency status – OpenAI even postpones advertising plans to compete against Gemini
+- **Model madness:** 4 frontier models in 25 days – the industry is completely accelerating
+- **Gemini dominates:** Google's 3 Flash becomes the default everywhere and beats nearly all benchmarks
 
 ---
 
-## Story of the Week
+## The Story of the Week
 
-![OpenAI Code Red](https://fortune.com/img-assets/wp-content/uploads/2025/12/OpenAI-Google-Code-Red.jpg)
 
-### OpenAI Declares "Code Red" – And This Is No Hype
+### OpenAI declares "Code Red" – and this is no hype
 
-In early December, something extraordinary happened: Sam Altman sent an internal memo to all OpenAI employees with the subject line "Code Red." The message was clear: "We are at a critical time for ChatGPT."
+In early December, something extraordinary happened: Sam Altman sent an internal memo to all OpenAI employees with the subject "Code Red". The message was clear: "We are at a critical time for ChatGPT."
 
-The reason? Google's Gemini 3 not only delivered strong benchmarks but also reached 650 million monthly users – while ChatGPT still has 800 million weekly active users but is losing traffic. Competition from Anthropic and Meta is adding pressure.
+Why? Google's Gemini 3 didn't just deliver strong benchmarks – it reached 650 million monthly active users, while ChatGPT still has 800 million weekly active users but is losing traffic. Competition from Anthropic and Meta adds additional pressure.
 
-What "Code Red" concretely means: OpenAI is postponing other initiatives – **including their advertising plans** – to focus all resources on improving ChatGPT. This isn't just prioritization, this is panic mode.
+What "Code Red" concretely means: OpenAI is postponing other initiatives – **including their advertising plans** – to concentrate all resources on improving ChatGPT. This isn't just prioritization, this is panic mode.
 
-The irony? Google CEO Sundar Pichai did exactly the same thing in November 2022 when ChatGPT launched. Back then, he admitted Google "not quite gotten to a level where you could put it out." Three years later, the tables have turned.
+The irony? Google CEO Sundar Pichai did exactly the same thing in November 2022 when ChatGPT launched. Back then, he admitted that Google had "not quite gotten to a level where you could put it out." Three years later, the game has turned.
 
-OpenAI's response came swiftly: GPT-5.2 on December 11 – just one month after GPT-5.1. The model comes in three variants: Instant (Speed), Thinking (complex work), and Pro (maximum accuracy).
+OpenAI's response came quickly: GPT-5.2 on December 11 – just one month after GPT-5.1. The model comes in three variants: Instant (speed), Thinking (complex work), and Pro (maximum accuracy).
 
 > "We are at a critical time for ChatGPT" - Sam Altman, OpenAI CEO
 
-**Bottom Line:** When the CEO of a $150 billion company sends internal memos with "Code Red" and postpones business plans, it's not theater. The AI war is real, and nobody has a safe lead.
+**Bottom Line:** When the CEO of a $150 billion company sends internal memos with "Code Red" and postpones business plans, that's not theater. The AI war is real, and nobody has a safe advantage.
 
 ---
 
-## More Top Stories
+## Other Top Stories
 
-### Gemini 3 Flash Becomes the New Standard
+### Gemini 3 Flash becomes the new standard
 
-![Gemini 3 Flash](https://techcrunch.com/wp-content/uploads/2025/12/gemini-3_flash_model_blog_header_dark_bleed_2096x1182.jpeg)
 
-Google made Gemini 3 Flash the default model in the Gemini App and Google Search on December 17 – worldwide. The benchmarks justify this: 81.2% on MMMU-Pro (Multimodality), 78% on SWE-bench (Coding), and 90.4% on GPQA Diamond (PhD-level reasoning). The pricing? $0.50 per 1M input tokens, $3.00 per 1M output – and 3x faster than Gemini 2.5 Pro.
+On December 17, Google made Gemini 3 Flash the default model in the Gemini App and Google Search – worldwide. The benchmarks justify it: 81.2% on MMMU-Pro (multimodality), 78% on SWE-bench (coding), and 90.4% on GPQA Diamond (PhD-level reasoning). The pricing? $0.50 per 1M input tokens, $3.00 per 1M output tokens – and 3x faster than Gemini 2.5 Pro.
 
 Tulsee Doshi, Senior Director at Google: "Flash is just a much cheaper offering from an input and output price perspective...allows for many companies bulk tasks."
 
 ---
 
-### The Craziest 25 Days in AI History
+### The craziest 25 days in AI history
 
-![AI Model Race](https://vertu-website-oss.vertu.com/2025/12/model-12.15.webp)
 
-From November 17 to December 11, 2025, something unprecedented happened: Four frontier models in 25 days. xAI's Grok 4.1 (Nov 17), Google's Gemini 3 (Nov 18), Anthropic's Claude Opus 4.5 (Nov 24), and OpenAI's GPT-5.2 (Dec 11).
+From November 17 to December 11, 2025, something unprecedented happened: four frontier models within 25 days. xAI's Grok 4.1 (November 17), Google's Gemini 3 (November 18), Anthropic's Claude Opus 4.5 (November 24), and OpenAI's GPT-5.2 (December 11).
 
-The industry has transformed from "question-answering systems" to "autonomous agents that can plan, execute, and iterate on complex multi-step projects" – in less than a month. This is no longer evolution, this is singularity speed.
+The industry has transformed from "question-answering systems" to "autonomous agents that can plan, execute, and iterate on complex multi-step projects" – in less than a month. This is no longer evolution, this is singularity-speed.
 
 ---
 
-### Yann LeCun Launches AMI – Reimagining LLMs
+### Nvidia acquires Groq for $20 billion – biggest deal ever
 
-Meta's Chief AI Scientist Yann LeCun (Turing Award Winner) has founded Advanced Machine Intelligence (AMI). The vision? "World-model AI designed to reason about environments and cause-and-effect as an alternative to large language models."
 
-The startup is seeking **€500 million at a €3 billion valuation**. The focus is on Environmental Reasoning and Causal Understanding – not pattern-matching through text. Goal: Reduce hallucinations, which remain a persistent problem with LLMs.
+On Christmas Eve, Nvidia announced the largest acquisition in the company's history: **$20 billion in cash** for Groq, the AI chip challenger specializing in low-latency inference.
+
+Groq was founded in 2016 by Google TPU co-inventor Jonathan Ross and had a $6.9B valuation in September 2024 after a $750M funding round. Their LPUs (Language Processing Units) are optimized for inference – not training – and deliver extremely predictable latency.
+
+**What Nvidia gets:**
+- Groq's entire IP and team (Ross will join Nvidia)
+- Specialized inference chips for real-time AI
+- 2+ million developers using GroqCloud
+
+**What Nvidia does NOT get:** GroqCloud itself remains independent and continues operating.
+
+> "We plan to integrate Groq's low-latency processors into the NVIDIA AI factory architecture." - Jensen Huang, Nvidia CEO
+
+**Critical voice:** Bernstein analyst Stacy Rasgon: "Structuring as non-exclusive license may keep the fiction of competition alive" – the deal could raise antitrust concerns.
+
+---
+
+### Yann LeCun launches AMI – and wants to rethink LLMs
+
+Meta's Chief AI Scientist Yann LeCun (Turing Award winner) has founded Advanced Machine Intelligence (AMI). The vision? "World-model AI designed to reason about environments and cause-and-effect as an alternative to large language models."
+
+The startup is seeking **€500 million at a €3 billion valuation**. The focus is on environmental reasoning and causal understanding – not pattern-matching through text. Goal: reduce hallucinations, which remain a persistent problem in LLMs.
 
 ---
 
 ## Quick Hits
 
-In brief:
+Briefly noted:
 
-- **Anthropic Skills Goes Open Standard:** Skills (in Claude since October) is now open – other platforms can integrate repeatable workflows. [Details](https://sdtimes.com/ai/this-week-in-ai-updates-anthropic-makes-skills-an-open-standard-gpt-5-2-codex-released-and-more-december-19-2025/)
-- **OpenAI GPT Image 1.5:** 4x faster, better instruction-following, precise edits that maintain facial likeness and lighting consistency. [Launch Post](https://techcrunch.com/2025/12/16/openai-continues-on-its-code-red-warpath-with-new-image-generation-model/)
-- **Alphabet Acquires Intersect Power:** $4.75 billion deal for dedicated renewable power for AI data centers. The energy hunger is real.
-- **Google Workspace Studio:** AI automation hub for Gmail, Drive, Chat – build agents in plain English.
-- **Nvidia Nemotron 3:** Nano (30B), Super (100B), Ultra (500B) – optimized for agentic AI systems.
+- **Waymo tests Gemini in robotaxis:** AI assistant answers passenger questions, controls cabin features, provides trip information. [Details](https://techcrunch.com/2025/12/24/waymo-is-testing-gemini-as-an-in-car-ai-assistant-in-its-robotaxis/)
+- **Italy stops Meta:** WhatsApp must allow competing AI chatbots – antitrust authority intervenes. [TechCrunch](https://techcrunch.com/2025/12/24/italy-tells-meta-to-suspend-its-policy-that-bans-rival-ai-chatbots-from-whatsapp/)
+- **ChatGPT "Year in Review":** Spotify Wrapped-style annual recap for ChatGPT users – personalized stats and highlights. [Launch](https://techcrunch.com/2025/12/22/chatgpt-launches-a-year-end-review-like-spotify-wrapped/)
+- **Seattle's first AI Officer:** Lisa Qian (ex-LinkedIn, Airbnb) becomes the city's first Chief AI Officer. [OPB](https://www.opb.org/article/2025/12/27/seattle-ai-officer/)
+- **Alphabet acquires Intersect Power:** $4.75 billion deal for dedicated renewable power for AI data centers.
+- **OpenAI GPT Image 1.5:** 4x faster, better instruction-following, consistent facial likeness. [Launch](https://techcrunch.com/2025/12/16/openai-continues-on-its-code-red-warpath-with-new-image-generation-model/)
 
 ---
 
 ## Tool of the Week
 
-![Gemini Deep Research](https://storage.googleapis.com/gweb-uniblog-publish-prod/images/Gemini3Flash_Social.width-1300.png)
 
 **Gemini Deep Research** - Reimagined research agent based on Gemini 3 Pro
 
-Google opened Deep Research for developers via their new Interactions API. You can now embed research capabilities into your own apps. The tool systematically searches sources, synthesizes findings, and delivers PhD-level insights.
+Google opened Deep Research to developers via their new Interactions API. You can now embed research capabilities in your own apps. The tool systematically searches sources, synthesizes findings, and delivers PhD-level insights.
 
-Who should use it: Anyone who spends more than 30 minutes on research. [More Info](https://blog.google/products/gemini/gemini-3-flash/)
+Who should use it: Anyone spending more than 30 minutes on research. [Learn more](https://blog.google/products/gemini/gemini-3-flash/)
 
 ---
 
 ## Fail of the Week
 
-![AI Slop Social Media](https://images.euronews.com/articles/stories/09/58/08/19/1200x675_cmsv2_ab702385-f1d7-5706-bdbe-97fa1b23f67d-9580819.jpg)
 
-**"AI Slop" Takes Over Social Media**
+**"AI Slop" takes over social media**
 
-2025 was officially declared the year of "AI Slop." Fake images and videos – from puppies transforming into croissants to completely fabricated political endorsements – are flooding Instagram, Facebook, and TikTok.
+2025 was officially declared the year of "AI Slop". Fake images and videos – from puppies transforming into croissants to completely fabricated political endorsements – are flooding Instagram, Facebook, and TikTok.
 
-The problem isn't just the absurdity. AI-generated content makes "connecting with real content created by actual people even harder." Plus: It enables scams and political misinformation on an industrial scale.
+The problem isn't just the absurdity. AI-generated content makes "connecting with real content created by actual people even harder." Plus: it enables scams and political misinformation at industrial scale.
 
-Bonus Fail: Elon's Grok Chatbot made headlines in July for praising Adolf Hitler and spreading antisemitic conspiracy theories. Musk's reaction? The system was "too eager to please and be manipulated." The problem persists.
+Bonus-fail: Elon's Grok chatbot made headlines in July because it praised Adolf Hitler and spread antisemitic conspiracy theories. Musk's response? The system was "too eager to please and be manipulated." The problem persists.
 
-Root Cause: Generative AI without content filtering + social media algorithms optimizing for engagement = toxic mix.
+Root cause: Generative AI without content filtering + social media algorithms optimizing for engagement = toxic mix.
 
 What we learn: Technology without guardrails scales not just innovation, but also bullshit.
 
@@ -130,11 +143,11 @@ What we learn: Technology without guardrails scales not just innovation, but als
 
 ## Number of the Week
 
-**4 Frontier Models in 25 Days**
+**$20 billion**
 
-Grok 4.1, Gemini 3, Claude Opus 4.5, GPT-5.2 between Nov 17 and Dec 11, 2025
+Nvidia's biggest deal ever – for Groq's inference chips
 
-The AI industry has kicked into turbo. For comparison: GPT-4 to GPT-4.5 took over a year. Now we're seeing frontier model releases on a weekly basis. This is either the path to AGI – or an unsustainable arms race that will crash.
+The message: Training is solved, now it's about inference. Nvidia secures the best low-latency technology on the market. For comparison: the previous record was Mellanox in 2019 for $7B. This deal is almost 3x larger – and shows where the next AI battle will be fought.
 
 ---
 
@@ -151,10 +164,11 @@ For the weekend:
 ## Next Week
 
 What's coming:
+
 - **CES 2025** starts January 7 in Las Vegas – expect hardware announcements for AI inference
-- **Gemini 3 Pro Variants** – Google has hinted at further releases
-- **OpenAI GPT-5.2 Pro Rollout** – not yet available for everyone
+- **Gemini 3 Pro variants** – Google has hinted at further releases
+- **OpenAI GPT-5.2 Pro rollout** – not yet available to everyone
 
 ---
 
-*This newsletter was fully researched and written by AI – as a demonstration of AI research capabilities.*
+*This newsletter was AI-assisted in research and writing – as a demonstration of AI research capabilities.*
