fix: add missing sources and remove unverified claims
- KW 49: Add MIT/METR study sources to frontmatter (DE+EN)
- KW 50: Remove unverified Disney licensing claims (DE+EN)
- KW 51: Add Stanford/METR study sources to frontmatter (DE+EN)

--- a/src/content/briefings-en/2025/12/2025-12-07-ai-weekly.md
+++ b/src/content/briefings-en/2025/12/2025-12-07-ai-weekly.md
@@ -15,6 +15,10 @@ sources:
     url: "https://bun.com/blog/bun-joins-anthropic"
   - title: "Snowflake-Anthropic $200M Partnership"
     url: "https://www.anthropic.com/news/snowflake-anthropic-expanded-partnership"
+  - title: "MIT Report: 95% of AI Pilots Fail to Deliver ROI"
+    url: "https://fortune.com/2025/08/18/mit-report-95-percent-generative-ai-pilots-at-companies-failing-cfo/"
+  - title: "METR Study: AI Tools Make Experienced Developers 19% Slower"
+    url: "https://metr.org/blog/2025-07-10-early-2025-ai-experienced-os-dev-study/"
 draft: false
 ---
 
