--- a/src/content/briefings-en/2025/12/2025-12-21-ai-weekly.md
+++ b/src/content/briefings-en/2025/12/2025-12-21-ai-weekly.md
@@ -17,6 +17,10 @@ sources:
     url: "https://www.anthropic.com/news/compliance-framework-SB53"
   - title: "Andrew Ng: AI is limited"
     url: "https://www.nbcnews.com/tech/innovation/andrew-ng-says-ai-limited-wont-replace-humans-anytime-soon-rcna246074"
+  - title: "Stanford Study: Young Developers Losing Jobs to AI"
+    url: "https://www.cnbc.com/2025/08/28/generative-ai-reshapes-us-job-market-stanford-study-shows-entry-level-young-workers.html"
+  - title: "METR Study: AI Tools and Developer Productivity"
+    url: "https://metr.org/blog/2025-07-10-early-2025-ai-experienced-os-dev-study/"
 draft: false
 ---
 
