feat: replace autoImage with direct heroImage via Pollinations.ai
- Remove autoImage feature (dynamic generation on page load)
- Add heroImage + heroImageAlt to frontmatter schema
- Update all 10 newsletters (DE+EN) with pre-generated hero images
- Add 5 AI-generated hero images in public/images/briefings/
- Update CLAUDE.md with new hero image workflow
- Simplify Astro page components (remove Pollinations URL generation)

Hero images are now generated during content creation via:
~/.claude/skills/bks-news-generator/scripts/generate-hero.sh

Images generated with Pollinations.ai (free, no API key required)

--- a/src/content/briefings-en/2025/12/2025-12-07-ai-weekly.md
+++ b/src/content/briefings-en/2025/12/2025-12-07-ai-weekly.md
@@ -2,6 +2,8 @@
 title: "AI Weekly - Week 49/2025"
 description: "Anthropic acquires Bun and reaches $1B ARR, AWS re:Invent brings Frontier Agents, and OpenAI declares Code Red"
 date: 2025-12-07
+heroImage: "/images/briefings/2025/12/2025-12-07-hero.jpg"
+heroImageAlt: "AI-generated illustration: Cloud Computing and AI Infrastructure"
 tags: [ai, weekly, anthropic, aws, openai, bun, claude-code, reinvent, trainium, agents]
 type: weekly
 sources:
