--- a/src/content/briefings-en/2025/12/2025-12-21-ai-weekly.md
+++ b/src/content/briefings-en/2025/12/2025-12-21-ai-weekly.md
@@ -2,6 +2,8 @@
 title: "AI Weekly - Week 51/2025"
 description: "The great AI hype correction, 55,000 AI-driven layoffs, and NY signs RAISE Act"
 date: 2025-12-21
+heroImage: "/images/briefings/2025/12/2025-12-21-hero.jpg"
+heroImageAlt: "AI-generated illustration: AI Hype Correction Waves"
 tags: [ai, weekly, layoffs, regulation, anthropic, openai, google, hype, reality-check, policy]
 type: weekly
 sources:
