--- a/src/content/briefings-en/2025/12/2025-12-28-ai-weekly.md
+++ b/src/content/briefings-en/2025/12/2025-12-28-ai-weekly.md
@@ -2,6 +2,8 @@
 title: "AI Weekly - Week 52/2025"
 description: "Memory chips running short, Microsoft draws superintelligence red lines, and Nvidia buys Groq for $20 billion"
 date: 2025-12-28
+heroImage: "/images/briefings/2025/12/2025-12-28-hero.jpg"
+heroImageAlt: "AI-generated illustration: Semiconductor Chip Technology"
 tags: [ai, weekly, nvidia, microsoft, memory, chips, copyright, anthropic]
 type: weekly
 sources:
