--- a/src/content/briefings/2025/12/2025-12-07-ai-weekly.md
+++ b/src/content/briefings/2025/12/2025-12-07-ai-weekly.md
@@ -2,6 +2,8 @@
 title: "AI Weekly - KW 49/2025"
 description: "Anthropic kauft Bun und erreicht $1B ARR, AWS re:Invent bringt Frontier Agents, und OpenAI ruft Code Red aus"
 date: 2025-12-07
+heroImage: "/images/briefings/2025/12/2025-12-07-hero.jpg"
+heroImageAlt: "AI-generierte Illustration: Cloud Computing und AI-Infrastruktur"
 tags: [ai, weekly, anthropic, aws, openai, bun, claude-code, reinvent, trainium, agents]
 type: weekly
 sources:
