--- a/src/content/briefings/2025/12/2025-12-28-ai-weekly.md
+++ b/src/content/briefings/2025/12/2025-12-28-ai-weekly.md
@@ -2,6 +2,8 @@
 title: "AI Weekly - KW 52/2025"
 description: "Memory-Chips werden knapp, Microsoft zieht Superintelligence-Red-Lines, und Nvidia kauft Groq für $20 Milliarden"
 date: 2025-12-28
+heroImage: "/images/briefings/2025/12/2025-12-28-hero.jpg"
+heroImageAlt: "AI-generierte Illustration: Semiconductor Chip Technologie"
 tags: [ai, weekly, nvidia, microsoft, memory, chips, copyright, anthropic]
 type: weekly
 sources:
