--- a/src/content/briefings-en/2025/12/2025-12-14-ai-weekly.md
+++ b/src/content/briefings-en/2025/12/2025-12-14-ai-weekly.md
@@ -2,6 +2,8 @@
 title: "AI Weekly - Week 50/2025"
 description: "MCP becomes Linux Foundation Standard, GPT-5.2 responds to Code Red, and Trump signs AI Executive Order"
 date: 2025-12-14
+heroImage: "/images/briefings/2025/12/2025-12-14-hero.jpg"
+heroImageAlt: "AI-generated illustration: Networked Protocol Nodes"
 tags: [ai, weekly, mcp, openai, anthropic, google, trump, policy, disney, sora]
 type: weekly
 sources:
