--- a/src/content/briefings/2025/12/2025-12-14-ai-weekly.md
+++ b/src/content/briefings/2025/12/2025-12-14-ai-weekly.md
@@ -2,6 +2,8 @@
 title: "AI Weekly - KW 50/2025"
 description: "MCP wird Linux Foundation Standard, GPT-5.2 antwortet auf Code Red, und Trump unterzeichnet AI Executive Order"
 date: 2025-12-14
+heroImage: "/images/briefings/2025/12/2025-12-14-hero.jpg"
+heroImageAlt: "AI-generierte Illustration: Vernetzte Protokoll-Nodes"
 tags: [ai, weekly, mcp, openai, anthropic, google, trump, policy, disney, sora]
 type: weekly
 sources:
