--- a/src/content/briefings/2025/12/2025-12-21-ai-weekly.md
+++ b/src/content/briefings/2025/12/2025-12-21-ai-weekly.md
@@ -2,6 +2,8 @@
 title: "AI Weekly - KW 51/2025"
 description: "Der große AI Hype Correction, 55.000 AI-bedingte Layoffs, und NY unterzeichnet RAISE Act"
 date: 2025-12-21
+heroImage: "/images/briefings/2025/12/2025-12-21-hero.jpg"
+heroImageAlt: "AI-generierte Illustration: AI Hype Korrektur Wellen"
 tags: [ai, weekly, layoffs, regulation, anthropic, openai, google, hype, reality-check, policy]
 type: weekly
 sources:
